kubernetes/base/mile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mile-ingress
  namespace: cloudmile
  labels:
    k8s-app: mile
spec:
  ingressClassName: nginx
  rules:
  - host: local.cloudmile.com
    http:
      paths:
      - backend:
          service:
            name: mile-service1
            port:
              number: 80
        path: /v1/helloworld1
        pathType: Prefix
      - backend:
          service:
            name: mile-service2
            port:
              number: 80
        path: /v1/helloworld2
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
